# personal-assistant

./: .gitignore  .pre-commit-config.yaml  Modelfile  Modelfile3.1  Modelfile3.2  README.md  pyproject.toml  requirements.txt
models/: init_tts_server.sh
src/: bark_demo.py  detect_speech_silence.py  faster_whisper_demo.py  piper_demo.py  run_server.sh  tool_calling_assistant.py  virtual_assistant_demo.py
utils/: audio.py  llm.py
