[tool.poetry]
name = "llm-tts"
version = "0.1.0"
description = ""
authors = ["Rodrigo Kobashikawa <rodrigokrosa@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_tts"}]

[tool.poetry.dependencies]
python = "^3.10.12"
pre-commit = "^3.7.0"
ollama = "^0.4"
ipykernel = "^6.29.4"
transformers = "^4.40.1"
scipy = "^1.13.0"
accelerate = "^0.29.3"
optimum = "^1.19.1"
requests = "^2.31.0"
sounddevice = "^0.4.6"
# torch = {version = "^2.0.1+cu118", source = "pytorch"}
pyaudio = "^0.2.14"
pydub = "^0.25.1"
webrtcvad = "^2.0.10"
faster-whisper = "^1.1.0"
rpi-gpio = "^0.7.1"

# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
